@@ -1,3 +1,8 @@
+2006-01-01  Marcus Meissner  <marcus@jet.franken.de>
+	
+	* library.c: Add EOS 350 canon id too, since
+	  it apparently reacts to PTP traffic on it too.
+
 2005-12-30  Marcus Meissner  <marcus@jet.franken.de>
 	
 	* library.c: Only allow getpartialobject for EXIF
